<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TableLayout
    android:background="#444444"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow android:padding="25dp">
        <TextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#6dffbf"
            android:gravity="center"
            android:layout_weight="2"
            android:text="Hello there!" />
    </TableRow>
    <TableRow
        android:background="#444444"
        android:padding="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#6dffbf"
            android:layout_weight="1"
            android:text="@string/type_of_menu"/>

        <Spinner
            android:id="@+id/spinner_type_of_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/lightblue"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />
    </TableRow>
    <TableRow
        android:background="#444444"
        android:padding="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#6dffbf"
            android:layout_weight="1"
            android:text="@string/drinks"/>
        <Spinner
            android:id="@+id/spinner_drinks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/lightblue"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </TableRow>
    <TableRow
        android:background="#444444"
        android:padding="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#6dffbf"
            android:layout_weight="1"
            android:text="@string/starters"/>
        <Spinner
            android:id="@+id/spinner_starters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/lightblue"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />


    </TableRow>
    <TableRow
        android:background="#444444"
        android:padding="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#6dffbf"
            android:layout_weight="1"
            android:text="@string/main_dish"/>
        <Spinner
            android:id="@+id/spinner_main_dish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/lightblue"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </TableRow>
    <TableRow
        android:background="#444444"
        android:padding="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#6dffbf"
            android:layout_weight="1"
            android:text="@string/deserts"/>
        <Spinner
            android:id="@+id/spinner_deserts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/lightblue"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

    </TableRow>
</TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>